[package]
name = "xml-log-scan"
version = "0.1.1"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2024"
categories = ["development-tools::debugging", "command-line-utilities"]
description = """
Parses and analyzes log files containing XMLs.
"""
homepage = "https://github.com/kilork/xml-log-scan"
keywords = ["XML", "XPath", "XPath3", "DOM", "SAX"]
license = "Unlicense OR MIT"
repository = "https://github.com/kilork/xml-log-scan"
rust-version = "1.87"

[dependencies]
clap = { version = "~4.5", features = ["derive", "env"] }
quick-xml = "~0.37.5"
amxml = "0.5.3"
regex = "1"