[package]
name = "xml-log-scan"
version = "0.1.4"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2024"
categories = ["development-tools::debugging", "command-line-utilities"]
description = """
Extracts XMLs from log files or standard input. Supports XPath 3.1 evaluation against XMLs found.
"""
homepage = "https://github.com/rust-utility/xml-log-scan"
keywords = ["XML", "XPath", "XPath3", "DOM", "SAX"]
license = "Unlicense OR MIT"
repository = "https://github.com/rust-utility/xml-log-scan"
rust-version = "1.87"

[features]
default = ["debug"]
debug = []

[dependencies]
clap = { version = "~4.5", features = ["derive", "env"] }
quick-xml = "~0.37.5"
amxml = "0.5.3"
regex = "1"
thiserror = "1"
